// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DoctorCard matches the snapshot when available today 1`] = `
<KeyboardProvider>
  <View
    style={
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#DDE5E1",
        "borderRadius": 27,
        "borderWidth": 2,
        "flexDirection": "column",
        "gap": 18,
        "padding": 24,
      }
    }
  >
    <View
      accessibilityLabel="Dr. Rohan Mehta"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flexDirection": "column",
          "gap": 18,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 18,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#2F7D6D",
              "borderRadius": 35,
              "flexShrink": 0,
              "height": 70,
              "justifyContent": "center",
              "width": 70,
            }
          }
        >
          <Text
            maxFontSizeMultiplier={1.3}
            style={
              {
                "color": "#FFFFFF",
                "fontFamily": "Figtree_700Bold",
                "fontSize": 24,
              }
            }
          >
            RM
          </Text>
        </View>
        <View
          style={
            {
              "flex": 1,
              "flexDirection": "column",
              "gap": 6,
              "minWidth": 0,
            }
          }
        >
          <Text
            maxFontSizeMultiplier={1.3}
            style={
              {
                "color": "#14213D",
                "fontFamily": "Figtree_700Bold",
                "fontSize": 22,
                "fontWeight": "700",
              }
            }
          >
            Dr. Rohan Mehta
          </Text>
          <Text
            maxFontSizeMultiplier={1.3}
            style={
              {
                "color": "#6B7A8C",
                "fontFamily": "Figtree_400Regular",
                "fontSize": 19,
              }
            }
          >
            Cardiologist · 14 yrs exp.
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 6,
              }
            }
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={24}
              bbWidth={24}
              fill="none"
              focusable={false}
              height={24}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": 24,
                    "width": 24,
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
              width={24}
            >
              <RNSVGGroup
                fill={null}
                propList={
                  [
                    "fill",
                  ]
                }
              >
                <RNSVGPath
                  d="M12 2.5l2.9 6.1 6.6.8-4.9 4.6 1.3 6.6L12 17.3l-5.9 3.3 1.3-6.6-4.9-4.6 6.6-.8z"
                  fill={
                    {
                      "payload": 4293434159,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
              </RNSVGGroup>
            </RNSVGSvgView>
            <Text
              maxFontSizeMultiplier={1.3}
              style={
                {
                  "color": "#14213D",
                  "fontFamily": "Figtree_700Bold",
                  "fontSize": 19,
                  "fontWeight": "700",
                }
              }
            >
              4.9
            </Text>
            <Text
              maxFontSizeMultiplier={1.3}
              style={
                {
                  "color": "#6B7A8C",
                  "fontFamily": "Figtree_400Regular",
                  "fontSize": 18,
                }
              }
            >
              (320 reviews)
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "backgroundColor": "#DDE5E1",
            "height": 2,
          }
        }
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        accessibilityLabel="Next available Today, 11:30 AM"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "flex": 1,
            "flexDirection": "column",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            {
              "color": "#6B7A8C",
              "fontFamily": "Figtree_400Regular",
              "fontSize": 18,
            }
          }
        >
          Next available
        </Text>
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            {
              "color": "#14213D",
              "fontFamily": "Figtree_700Bold",
              "fontSize": 21,
              "fontWeight": "700",
            }
          }
        >
          Today, 11:30 AM
        </Text>
      </View>
      <View
        accessibilityLabel="Book"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#2F7D6D",
            "borderRadius": 18,
            "height": 56,
            "justifyContent": "center",
            "paddingHorizontal": 21,
            "paddingVertical": 0,
            "width": "auto",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            {
              "color": "#FFFFFF",
              "fontFamily": "Figtree_700Bold",
              "fontSize": 21,
              "fontWeight": "700",
            }
          }
        >
          Book
        </Text>
      </View>
    </View>
  </View>
</KeyboardProvider>
`;

exports[`DoctorCard matches the snapshot when not available today 1`] = `
<KeyboardProvider>
  <View
    style={
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#DDE5E1",
        "borderRadius": 27,
        "borderWidth": 2,
        "flexDirection": "column",
        "gap": 18,
        "padding": 24,
      }
    }
  >
    <View
      accessibilityLabel="Dr. Rohan Mehta"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flexDirection": "column",
          "gap": 18,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 18,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#2F7D6D",
              "borderRadius": 35,
              "flexShrink": 0,
              "height": 70,
              "justifyContent": "center",
              "width": 70,
            }
          }
        >
          <Text
            maxFontSizeMultiplier={1.3}
            style={
              {
                "color": "#FFFFFF",
                "fontFamily": "Figtree_700Bold",
                "fontSize": 24,
              }
            }
          >
            RM
          </Text>
        </View>
        <View
          style={
            {
              "flex": 1,
              "flexDirection": "column",
              "gap": 6,
              "minWidth": 0,
            }
          }
        >
          <Text
            maxFontSizeMultiplier={1.3}
            style={
              {
                "color": "#14213D",
                "fontFamily": "Figtree_700Bold",
                "fontSize": 22,
                "fontWeight": "700",
              }
            }
          >
            Dr. Rohan Mehta
          </Text>
          <Text
            maxFontSizeMultiplier={1.3}
            style={
              {
                "color": "#6B7A8C",
                "fontFamily": "Figtree_400Regular",
                "fontSize": 19,
              }
            }
          >
            Cardiologist · 14 yrs exp.
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 6,
              }
            }
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={24}
              bbWidth={24}
              fill="none"
              focusable={false}
              height={24}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": 24,
                    "width": 24,
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
              width={24}
            >
              <RNSVGGroup
                fill={null}
                propList={
                  [
                    "fill",
                  ]
                }
              >
                <RNSVGPath
                  d="M12 2.5l2.9 6.1 6.6.8-4.9 4.6 1.3 6.6L12 17.3l-5.9 3.3 1.3-6.6-4.9-4.6 6.6-.8z"
                  fill={
                    {
                      "payload": 4293434159,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
              </RNSVGGroup>
            </RNSVGSvgView>
            <Text
              maxFontSizeMultiplier={1.3}
              style={
                {
                  "color": "#14213D",
                  "fontFamily": "Figtree_700Bold",
                  "fontSize": 19,
                  "fontWeight": "700",
                }
              }
            >
              4.9
            </Text>
            <Text
              maxFontSizeMultiplier={1.3}
              style={
                {
                  "color": "#6B7A8C",
                  "fontFamily": "Figtree_400Regular",
                  "fontSize": 18,
                }
              }
            >
              (320 reviews)
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "backgroundColor": "#DDE5E1",
            "height": 2,
          }
        }
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        accessibilityLabel="Next available Today, 11:30 AM"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "flex": 1,
            "flexDirection": "column",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            {
              "color": "#6B7A8C",
              "fontFamily": "Figtree_400Regular",
              "fontSize": 18,
            }
          }
        >
          Next available
        </Text>
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            {
              "color": "#14213D",
              "fontFamily": "Figtree_700Bold",
              "fontSize": 21,
              "fontWeight": "700",
            }
          }
        >
          Today, 11:30 AM
        </Text>
      </View>
      <View
        accessibilityLabel="Book"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": "#2F7D6D",
            "borderRadius": 18,
            "borderWidth": 3,
            "height": 56,
            "justifyContent": "center",
            "paddingHorizontal": 21,
            "paddingVertical": 0,
            "width": "auto",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            {
              "color": "#2F7D6D",
              "fontFamily": "Figtree_700Bold",
              "fontSize": 21,
              "fontWeight": "700",
            }
          }
        >
          Book
        </Text>
      </View>
    </View>
  </View>
</KeyboardProvider>
`;
